--- a/package.json
+++ b/package.json
@@ -12,14 +12,23 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "ag-models": "file:src/libs/models/src",
+    "color": "^3.1.3",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-intl": "^5.18.1",
     "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
-    "typescript": "~4.1.5"
+    "react-toastify": "^7.0.4",
+    "styled-components": "^5.3.0",
+    "typescript": "~4.1.5",
+    "uuid": "^8.3.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-app-rewired start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -38,5 +47,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/color": "^3.0.1",
+    "@types/react-router-dom": "^5.1.7",
+    "@types/styled-components": "^5.1.9",
+    "@types/uuid": "^8.3.0",
+    "babel-plugin-formatjs": "^10.2.15",
+    "babel-plugin-styled-components": "^1.12.0",
+    "customize-cra": "^1.0.0",
+    "eslint-plugin-formatjs": "^2.15.3",
+    "react-app-rewired": "^2.1.8"
   }
 }
