--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@types/react-redux": "^7.1.7",
     "ag-models": "file:src/libs/models/src",
     "color": "^3.1.3",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
     "lodash": "^4.17.21",
+    "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-intl": "^5.18.1",
@@ -33,9 +36,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -53,10 +53,43 @@
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
     "@types/uuid": "^8.3.0",
+    "@typescript-eslint/parser": "^4.25.0",
     "babel-plugin-formatjs": "^10.2.15",
     "babel-plugin-styled-components": "^1.12.0",
     "customize-cra": "^1.0.0",
+    "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-formatjs": "^2.15.3",
-    "react-app-rewired": "^2.1.8"
+    "react-app-rewired": "^2.1.8",
+    "tslint-plugin-prettier": "^2.3.0"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier --write"
+    ]
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "shared-config",
+      "plugin:prettier/recommended"
+    ],
+    "rules": {
+      "additional-rule": "warn"
+    },
+    "overrides": [
+      {
+        "files": [
+          "**/*.ts?(x)"
+        ],
+        "rules": {
+          "additional-typescript-only-rule": "warn"
+        }
+      }
+    ]
   }
 }
